passed variable title

--- a/sample_app/app/views/pages/home.html.haml
+++ b/sample_app/app/views/pages/home.html.haml
@@ -1,2 +1,13 @@
-%h1 Pages#home
-%p Find me in app/views/pages/home.html.haml
+!!!
+%html
+  %head
+    %title
+      Ruby on Rails Tutorial Sample App | #{ @title }
+      
+  %body
+    %h1Sample App
+    %p
+      This is the home page for the
+      %a{ :href => "http://railstutorial.org/"}Ruby on Rails Tutorial
+     
+        
