--- a/sample_app/app/views/pages/contact.html.haml
+++ b/sample_app/app/views/pages/contact.html.haml
@@ -1,2 +1,13 @@
-%h1 Pages#contact
-%p Find me in app/views/pages/contact.html.haml
+!!!
+%html
+  %head
+    %title
+      Ruby on Rails Tutorial Sample App  #{ @title }
+      
+  %body
+    %h1Contact
+    %p
+      This is the home page for the
+      %a{ :href => "http://railstutorial.org/feedback"}feddback page
+     
+        
