--- a/sample_app/app/views/layouts/application.html.haml
+++ b/sample_app/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title
-      Ruby on Rails Tutorial Sample App  #{ @title }
+      Ruby on Rails Tutorial Sample App | #{ @title }
     = csrf_meta_tag
 
   %body
