--- a/sample_app/app/assets/stylesheets/application.css
+++ b/sample_app/app/assets/stylesheets/application.css
@@ -1,7 +1,122 @@
-/*
- * This is a manifest file that'll automatically include all the stylesheets available in this directory
- * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
- * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require_self
- *= require_tree . 
-*/
+/* line 3, ../../stylesheets/application.sass */
+body {
+  backgound: #ccffff;
+}
+
+/* line 6, ../../stylesheets/application.sass */
+.container {
+  width: 950px;
+  margin: 0 auto;
+  overflow: hidden;
+  *zoom: 1;
+  width: 710px;
+}
+
+/* line 10, ../../stylesheets/application.sass */
+header {
+  padding-top: 20px;
+}
+/* line 12, ../../stylesheets/application.sass */
+header img {
+  padding: 1em;
+  background: #0099cc;
+}
+
+/* line 16, ../../stylesheets/application.sass */
+section {
+  margin-top: 1em;
+  font-size: 120%;
+  padding: 20px;
+  background: white;
+}
+/* line 21, ../../stylesheets/application.sass */
+section h1 {
+  font-size: 200%;
+}
+
+/* Links */
+/* line 25, ../../stylesheets/application.sass */
+a {
+  color: #0099cc;
+  text-decoration: none;
+}
+/* line 28, ../../stylesheets/application.sass */
+a .hover {
+  color: #006699;
+  text-decoration: underline;
+}
+/* line 31, ../../stylesheets/application.sass */
+a .visited {
+  color: #006699;
+}
+
+/* Navigation */
+/* line 37, ../../stylesheets/application.sass */
+nav {
+  float: right;
+  background-color: white;
+  padding: 0 0.7em;
+  white-space: nowrap;
+  /* ul */
+}
+/* line 43, ../../stylesheets/application.sass */
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+/* line 46, ../../stylesheets/application.sass */
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0.2em 0;
+}
+/* line 50, ../../stylesheets/application.sass */
+nav ul li a {
+  padding: 0 5px;
+  font-weight: bold;
+}
+/* line 53, ../../stylesheets/application.sass */
+nav ul li a .visited {
+  color: #0099cc;
+}
+/* line 55, ../../stylesheets/application.sass */
+nav ul li a .hover {
+  text-decoration: underline;
+}
+
+/* Sign up button */
+/* line 59, ../../stylesheets/application.sass */
+a.signup_button {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  width: 190px;
+  color: white;
+  background: #0099cc;
+  font-size: 150%;
+  font-weight: bold;
+  padding: 15px;
+}
+
+/* Round corners */
+/* line 73, ../../stylesheets/application.sass */
+.round {
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* Footer */
+/* line 80, ../../stylesheets/application.sass */
+footer {
+  text-align: center;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 86, ../../stylesheets/application.sass */
+footer nav {
+  float: none;
+}
