--- a/sample_app/app/views/layouts/_footer.html.haml
+++ b/sample_app/app/views/layouts/_footer.html.haml
@@ -2,9 +2,9 @@
   %nav.round
     %ul
       %li
-        = link_to "About", '#' 
+        = link_to "About", about_path
       %li
-        = link_to "Contact", '#' 
+        = link_to "Contact", contact_path 
       %li
         %a{ :href => "http://news.railstutorial.org/" }News
       %li
