--- a/sample_app/app/views/users/show.html.haml
+++ b/sample_app/app/views/users/show.html.haml
@@ -1,2 +1,13 @@
-= @user.name
-= @user.email
+%table{ :class => "profile", :summary => "Profile information"}
+  %tr
+    %td.main
+      %h1
+        = gravatar_for @user, :size => 30
+        = @user.name
+    
+    %td{ :class => "sidebar round" }
+      %strongNamme
+      = @user.name
+      %br
+      %strongURL
+      = link_to user_path(@user), @user
