finish signing up

--- a/sample_app/app/assets/stylesheets/application.css
+++ b/sample_app/app/assets/stylesheets/application.css
@@ -143,3 +143,47 @@ td.sidebar {
   border: 1px solid #999999;
   margin-bottom: -15px;
 }
+
+/* handle errors */
+/* line 107, ../../stylesheets/application.sass */
+.field_with_errors {
+  margin-top: 10px;
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+/* line 112, ../../stylesheets/application.sass */
+.field_with_errors label {
+  color: white;
+}
+
+/* line 115, ../../stylesheets/application.sass */
+#error_explanation {
+  width: 400px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+/* line 122, ../../stylesheets/application.sass */
+#error_explanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  background-color: #cc0000;
+  color: white;
+}
+/* line 131, ../../stylesheets/application.sass */
+#error_explanation p {
+  color: #333333;
+  margin-bottom: 0;
+  padding: 5px;
+}
+/* line 136, ../../stylesheets/application.sass */
+#error_explanation ul li {
+  font-size: 12px;
+  list-style: square;
+}
