--- a/sample_app/app/views/users/new.html.haml
+++ b/sample_app/app/views/users/new.html.haml
@@ -1,2 +1,28 @@
-%h1 Users#new
-%p Find me in app/views/users/new.html.haml
+%h1 Sign up
+
+= form_for(@user) do |f|
+  = render 'shared/error_messages'
+
+  .field
+    = f.label :name
+    %br
+    = f.text_field :name
+    
+  .field
+    = f.label :email
+    %br
+    = f.text_field :email
+    
+  .field 
+    = f.label :password
+    %br
+    = f.password_field :password
+     
+  .field
+    = f.label :password_confirmation
+    %br
+    = f.password_field :password_confirmation
+     
+  .action
+    = f.submit "Sign up"
+     
