finish sign-in-out

--- a/sample_app/app/views/layouts/_header.html.haml
+++ b/sample_app/app/views/layouts/_header.html.haml
@@ -8,7 +8,7 @@
       = link_to "Help", help_path
     - if signed_in?
       %li
-        = link_to "Sign out", signout_path, :method => :delet
+        = link_to "Sign out", signout_path, :method => :delete
 
     - else
       %li
