--- a/sample_app/app/stylesheets/application.sass
+++ b/sample_app/app/stylesheets/application.sass
@@ -137,8 +137,12 @@ td.sidebar
     font-size: 12px
     list-style: square
 
-
-
+/*about users */
+ul.users 
+  margin-top: 1em
+  li
+    list-style: none
+    
 
  
 
