--- a/sample_app/app/views/layouts/_header.html.haml
+++ b/sample_app/app/views/layouts/_header.html.haml
@@ -8,8 +8,10 @@
       = link_to "Help", help_path
     - if signed_in?
       %li
+        = link_to "Users", users_path
+        = link_to "Profile", current_user
+        = link_to "Setting", edit_user_path(current_user)
         = link_to "Sign out", signout_path, :method => :delete
-
     - else
       %li
         = link_to "Sign in", signin_path
