--- a/sample_app/app/views/users/new.html.haml
+++ b/sample_app/app/views/users/new.html.haml
@@ -1,7 +1,8 @@
 %h1 Sign up
 
 = form_for(@user) do |f|
-  = render 'shared/error_messages'
+  = render 'shared/error_messages', :object => f.object 
+
 
   .field
     = f.label :name
