--- a/sample_app/app/stylesheets/application.sass
+++ b/sample_app/app/stylesheets/application.sass
@@ -143,6 +143,49 @@ ul.users
   li
     list-style: none
     
+    
+/*about microposts*/
+table.profile td.main h1
+  margin-bottom: 1em
+  
+
+table.microposts 
+  margin-top: 1em
+
+table.microposts tr 
+  height: 70px
+  td.gravatar 
+    border-top: 1px solid #ccc
+    vertical-align: top
+    width: 50px
+  td.micropost 
+    border-top: 1px solid #ccc
+    vertical-align: top
+    padding-top: 10px
+  
+  span.timestamp 
+    display: block
+    font-size: 85%
+    color: #666
+    padding-right: 10em
+div.user_info 
+  img 
+    padding-right: 0.1em
+  a 
+    text-decoration: none
+
+  span.user_name 
+    position: absolute
+  
+  span.microposts 
+    font-size: 80%
+
+form.new_micropost 
+  margin-bottom: 2em
+  textarea 
+    height: 4em
+    margin-bottom: 0
+
 
  
 
