--- a/sample_app/app/views/pages/home.html.haml
+++ b/sample_app/app/views/pages/home.html.haml
@@ -1,8 +1,20 @@
-%h1 Sample App
-%p
-  This is the home page for the
-  %a{ :href => "http://railstutorial.org/"}Ruby on Rails Tutorial
+- if signed_in?
+  %table{ :class => "front", :summary => "For signed-in users"}
+    %tr
+      %td.main
+        %h1.microposts
+          What's up?
+        = render 'shared/micropost_form'
+        
+      %td{ :calss => "sidebar round" }
+        = render 'shared/user_info'
+- else
+       
+  %h1 Sample App
+  %p
+    This is the home page for the
+    %a{ :href => "http://railstutorial.org/"}Ruby on Rails Tutorial
   
-= link_to "Sign up now!", signup_path, :class => "signup_button round"
+    = link_to "Sign up now!", signup_path, :class => "signup_button round"
      
         
