--- a/sample_app/app/views/users/show.html.haml
+++ b/sample_app/app/views/users/show.html.haml
@@ -4,13 +4,17 @@
       %h1
         = gravatar_for @user, :size => 30
         = @user.name
+      - unless @user.microposts.empty?
+        %table{ :calss => "microposts", :summary => "User microposts"}
+          = render @microposts
+        = will_paginate @microposts
     
     %td{ :class => "sidebar round" }
-      %strongNamme
+      %strong Name:
       = @user.name
       %br
-      %strongURL
+      %strong URL:
       = link_to user_path(@user), @user
-      
-%span.content
-  = @user.microposts
+      %br
+      %strong Microposts:
+      = @user.microposts.count
