--- a/sample_app/app/views/pages/home.html.haml
+++ b/sample_app/app/views/pages/home.html.haml
@@ -5,7 +5,8 @@
         %h1.microposts
           What's up?
         = render 'shared/micropost_form'
-        
+        = render 'shared/feed'
+
       %td{ :calss => "sidebar round" }
         = render 'shared/user_info'
 - else
