--- a/sample_app/app/views/pages/home.html.haml
+++ b/sample_app/app/views/pages/home.html.haml
@@ -6,9 +6,11 @@
           What's up?
         = render 'shared/micropost_form'
         = render 'shared/feed'
+        
 
       %td{ :calss => "sidebar round" }
         = render 'shared/user_info'
+        = render 'shared/stats'
 - else
        
   %h1 Sample App
