--- a/HTML5/views/html5_for_designers/index.haml
+++ b/HTML5/views/html5_for_designers/index.haml
@@ -4,3 +4,5 @@
       第三章：Rich Media
       %li
         %a{:href => "/html5_for_designers/canvas"} Canvas
+      %li
+        %a{:href => "/html5_for_designers/audio"} Audio
