--- a/HTML5/views/html5_for_designers/index.haml
+++ b/HTML5/views/html5_for_designers/index.haml
@@ -6,3 +6,5 @@
         %a{:href => "/html5_for_designers/canvas"} Canvas
       %li
         %a{:href => "/html5_for_designers/audio"} Audio
+      %li
+        %a{:href => "/html5_for_designers/forms"} Forms
