--- a/HTML5/views/html5_for_designers/index.haml
+++ b/HTML5/views/html5_for_designers/index.haml
@@ -3,7 +3,14 @@
     %ul 
       第三章：Rich Media
       %li
-        %a{:href => "/html5_for_designers/canvas"} Canvas
+        Canvas
+        %ul
+          %li
+            %a{:href => "/html5_for_designers/canvas"} Canvas Basic
+          %li
+            %a{:href => "/html5_for_designers/canvas_tree"} Canvas Tree
+          %li
+            %a{:href => "/html5_for_designers/canvas_text"} Canvas Text
       %li
         %a{:href => "/html5_for_designers/audio"} Audio
       %li
